@@ -82,6 +82,8 @@ can be brewed.  The ingredients must be placed in a fire-safe container, \
 like a pot or pan.  A pot may be filled with water or other liquids, if \
 water or the liquid is required for the recipe.
 
+ARMOURSMITH=ARMORSMITHING
+ARMOURSMITHING=ARMORSMITHING
 ARMORSMITH=ARMORSMITHING
 ARMORSMITHING=<ABILITY>\
 Usage    : ARMORSMITH (LIST/MEND/REFIT/SCAN/LEARN) [ARMOR TYPE]\n\r\
@@ -985,6 +987,8 @@ The raw cloth for knitting is found using the Butchering or Foraging \
 skills.
 
 
+MASTER_ARMOURSMITHING=MASTERARMORSMITHING
+MASTERARMOURSMITHING=MASTERARMORSMITHING
 MARMORSMITH=MASTERARMORSMITHING
 MASTER_ARMORSMITHING=MASTERARMORSMITHING
 MASTERARMORSMITHING=<ABILITY>\
