@@ -637,7 +637,8 @@ mundane status by this spell, including wands, potions, \
 pills, and weapons/armor enchanted using the spells \
 Enchant Armor or Enchant Weapon.
 
-SPELL_DISENCHANTWAND=<ABILITY>\
+SPELL_DISENCHANTWAND=SPELL_DISENCHANT_WAND
+SPELL_DISENCHANT_WAND=<ABILITY>\
 Usage    : CAST "DISENCHANT WAND" [TARGET NAME] \n\r\
 Example  : cast "disenchant" wand\n\r\
 Wands are rendered into useless lumps by this spell.
