@@ -1,3 +1,6 @@
+# Build 5.9.? Released ??/??/2016
+   1. Apprentice now gets bonus common skill.
+   
 # Build 5.9.1 Released 01/04/2016
    1. "Who accounts", used by an archon, can quickly list the account name of each player online.
    2. New Achievement event "GOTITEM", and new rewards (see new stats below and achievements.ini)
